Resolved partial tooltip issue on iOS devices

--- a/packages/venia-concept/src/components/ProductOptions/toolTip.css
+++ b/packages/venia-concept/src/components/ProductOptions/toolTip.css
@@ -11,7 +11,7 @@
     box-shadow: 0 -1px 1px 0 rgba(0, 0, 0, 0.15);
     color: white;
     height: var(--tooltip-height);
-    width: max-content;
+    width: auto;
 
     /* Positioning. */
     position: absolute;
